--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
     "astro": "^5.8.1",
+    "astro-embed": "^0.9.0",
     "fetch-mcp": "^0.0.5"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^3.4.17"
   }
