Integrate Firebase with environment and Kubernetes support
Adds Firebase integration to the project, including environment variable configuration for both development and Kubernetes deployments. Introduces new components and scripts for Firebase initialization, analytics, and services. Updates .gitignore, Astro config, and Kubernetes manifests to support secure injection of Firebase credentials. Adds documentation for Firebase setup and usage.

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - firebase-secret.yaml
 
 # Uncomment to add namespace
 # namespace: blog-v2
