--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "firebase:setup": "node scripts/setup-firebase.mjs"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
@@ -14,7 +15,8 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.8.1",
     "astro-embed": "^0.9.0",
-    "fetch-mcp": "^0.0.5"
+    "fetch-mcp": "^0.0.5",
+    "firebase": "^12.0.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
