Add robust environment variable management and docs
Introduces environment setup scripts, validation utilities, and comprehensive documentation for managing Firebase and Astro environment variables in both development and production. Adds .env.production for production variable mapping, updates .gitignore to allow its inclusion, and enhances CI and build scripts for production workflows. Refactors Firebase initialization to use a new type-safe environment utility, and provides scripts and guides for environment validation and deployment on Vercel, Netlify, and Docker.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Build application
-        run: npm run build
+        run: npm run build:production
 
       - name: Test Docker build (single architecture)
         run: |
