--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.local
-.env.production
+# .env.production can be committed as it contains no secrets, only variable mappings
 
 # macOS-specific files
 .DS_Store
