--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Test build after updates
         run: |
           npm ci
-          npm run build
+          npm run build:production
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
