Remove production-specific build scripts
Eliminated 'build:production' and 'preview:production' scripts from package.json and updated CI workflows to use the standard 'build' script. This simplifies the build process and reduces redundancy in script definitions.

--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Test build after updates
         run: |
           npm ci
-          npm run build:production
+          npm run build
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
