--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm ci
 
       - name: Build application
-        run: npm run build:production
+        run: npm run build
 
       - name: Test Docker build (single architecture)
         run: |
