--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.local
 # .env.production can be committed as it contains no secrets, only variable mappings
 
 # macOS-specific files
