Revert "Add robust environment variable management and docs"
This reverts commit 2bbf3d9dfda2c426cd68e298edd83220978f2ad4.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "build:production": "NODE_ENV=production astro build",
     "preview": "astro preview",
-    "preview:production": "NODE_ENV=production astro preview",
     "astro": "astro",
-    "firebase:setup": "node scripts/setup-firebase.mjs",
-    "env:check": "node scripts/check-env.mjs"
+    "firebase:setup": "node scripts/setup-firebase.mjs"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
