--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.local
-# .env.production can be committed as it contains no secrets, only variable mappings
+.env.production
 
 # macOS-specific files
 .DS_Store
