Revert "Integrate Firebase with environment and Kubernetes support"
This reverts commit 678a9392f89f6c89ae39f12ccdd01bc7ad5fcd8c.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "firebase:setup": "node scripts/setup-firebase.mjs"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
@@ -15,8 +14,7 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.8.1",
     "astro-embed": "^0.9.0",
-    "fetch-mcp": "^0.0.5",
-    "firebase": "^12.0.0"
+    "fetch-mcp": "^0.0.5"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
