Add Firebase email subscription component
Introduced a new EmailSubscription.astro component with Firebase Firestore integration for collecting email subscribers. Updated BaseLayout.astro to include the subscription form on all pages. Added firebase.ts for Firebase client initialization, updated dependencies to include Firebase, and provided setup documentation in docs/firebase-email-subscription.md.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.8.1",
     "astro-embed": "^0.9.0",
-    "fetch-mcp": "^0.0.5"
+    "fetch-mcp": "^0.0.5",
+    "firebase": "^12.0.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
