--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,27 @@ jobs:
         run: npm ci
 
       - name: Build application
+        env:
+          PUBLIC_FIREBASE_API_KEY: ${{ secrets.PUBLIC_FIREBASE_API_KEY }}
+          PUBLIC_FIREBASE_AUTH_DOMAIN: ${{ secrets.PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          PUBLIC_FIREBASE_PROJECT_ID: ${{ secrets.PUBLIC_FIREBASE_PROJECT_ID }}
+          PUBLIC_FIREBASE_STORAGE_BUCKET: ${{ secrets.PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          PUBLIC_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          PUBLIC_FIREBASE_APP_ID: ${{ secrets.PUBLIC_FIREBASE_APP_ID }}
+          PUBLIC_FIREBASE_MEASUREMENT_ID: ${{ secrets.PUBLIC_FIREBASE_MEASUREMENT_ID }}
         run: npm run build
 
       - name: Test Docker build (single architecture)
         run: |
-          docker build -t blog-v2-test .
+          docker build -t blog-v2-test \
+            --build-arg PUBLIC_FIREBASE_API_KEY="${{ secrets.PUBLIC_FIREBASE_API_KEY }}" \
+            --build-arg PUBLIC_FIREBASE_AUTH_DOMAIN="${{ secrets.PUBLIC_FIREBASE_AUTH_DOMAIN }}" \
+            --build-arg PUBLIC_FIREBASE_PROJECT_ID="${{ secrets.PUBLIC_FIREBASE_PROJECT_ID }}" \
+            --build-arg PUBLIC_FIREBASE_STORAGE_BUCKET="${{ secrets.PUBLIC_FIREBASE_STORAGE_BUCKET }}" \
+            --build-arg PUBLIC_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}" \
+            --build-arg PUBLIC_FIREBASE_APP_ID="${{ secrets.PUBLIC_FIREBASE_APP_ID }}" \
+            --build-arg PUBLIC_FIREBASE_MEASUREMENT_ID="${{ secrets.PUBLIC_FIREBASE_MEASUREMENT_ID }}" \
+            .
           echo "Docker build completed successfully"
 
       - name: Upload build artifacts
