--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "astro": "^5.16.5",
     "astro-embed": "^0.9.0",
     "fetch-mcp": "^0.0.5",
-    "firebase": "^12.0.0"
+    "firebase": "^12.0.0",
+    "markdown-it": "^14.1.1",
+    "sanitize-html": "^2.17.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
